assets/main.scss
/* ... */
input,
textarea,
select {
    border: 1px solid transparent;
    padding: 0 $spacing-xs calc($spacing-xxs + 2px) $spacing-xs;
    background-color: $white;
    color: $black;
    border-radius: $br-md;
    font-size: $font-size-sm;
    font-weight: 400;
    transition: all 0.2s ease;
    font-family: $font-family-main;
    width:  100%;
}

    select {
        -moz-appearance:none;
        -webkit-appearance:none;
        appearance:none;
        background-image: url('/icons/down-arrow.svg');
        background-repeat: no-repeat;
        background-position: right .5em top 50%, 0 0;
    }

input:focus,
textarea:focus,
select:focus,
input:hover,
textarea:hover,
select:hover {
    outline: none;
}

input[disabled] {
    color: rgba($black, 0.65);
    background-color: rgba($orange, 0.05);
    cursor: not-allowed;
}

textarea {
    width: 100%;
    margin: 0 0 $spacing-sm 0;
}

.search-bar {
    width: 100%;
    padding: 0 $spacing-sm;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: $spacing-sm;

    input {
        color: $black;
        background: rgba($white, .35);
        border-radius: $br-md;
        border: $border;
        padding: $spacing-xxs $spacing-sm;
        width: 100%;
        font-size: $font-size-xs;
        outline: 1px solid rgba($brand, 0);
        outline-offset: 0px;

        &:active,
        &:focus,
        &:hover,
        &:focus-within {
            border: 1px solid rgba($brand, 1);
            outline: 4px solid rgba($brand, 0.1);
            background: rgba($white, 1);
        }
    }

    .list-buttons {
        display: flex;
        flex-direction: row;
        justify-content: flex-end;
        height: 100%;
        border: $border;
        border-radius: $br-md;
        background: rgba($white, .35);
        transition: all 0.2s ease;
        outline: 1px solid rgba($brand, 0);
        outline-offset: 0px;

        &:active,
        &:focus,
        &:hover,
        &:focus-within {
            border: 1px solid rgba($brand, 1);
            outline: 0px solid rgba($brand, 0.1);
            background: rgba($white, 1);
        }

        button {
            box-shadow: none;
            border-color: transparent;
            border-radius: 0;
            background-color: transparent;
            padding: 0;
            height: 100%;
            width: 36px;
            outline: 0;
        }

        svg {
            transition: all 0.2s ease;
            stroke-opacity: 0.5;
            stroke-width: 1px;
            width: 20px;
            height: 20px;
            transform: scale(0.9);

            path,
            mask path {
                stroke: $black;
                stroke-opacity: 0.65;
            }
        }

        .active {
            background: rgba($brand, 0.1);

            svg {

                path,
                mask path {
                    stroke: $brand;
                    stroke-opacity: 1;
                }
            }
        }
    }
}

.form-group {
    margin: 0 0 $spacing-sm 0;
    position: relative;

    div {
        position: relative;
    }
}

.form-input {
    border: 1px solid rgba($brand, 0.3);
    border-radius: $br-md;
    margin-bottom: $spacing-sm;
    transition: all 0.2s ease;
    width: 100%;
    overflow: hidden;
    height: fit-content;
    outline: 1px solid rgba($brand, 0);
    position: relative;

    .button {
        position: absolute;
        right: $spacing-sm;
        top: $spacing-sm;
        bottom: $spacing-sm;
        background-color: rgba($brand, 0.1);
        cursor: pointer;
        transition: all 0.2s ease;

        &:hover {
            background-color: rgba($brand, 0.2);
        }
    }

    &:focus,
    &:hover,
    &:focus-within,
    &:active {
        border: 1px solid rgba($brand, 0.9);
        outline: 4px solid rgba($brand, 0.3);
    }
}

.form-input-row {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: $spacing-md;
    width: 100%;
}

.form-block {
    padding: 0 0 $spacing-md 0;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    gap: $spacing-lg;
    height: 100%;

    &:last-of-type {
        border-bottom: none;
    }

    .form-details {
        width: 33%;

        h4 {
            margin: 0 0 $spacing-xxs 0;
        }
    }
    
    .form-content {
        width: 66%;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;

        .vc-container {
            align-self: flex-end;
        }
    }

    .form-content-full {
        height: 100%;
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;

        h4 {
            margin: 0 0 $spacing-xs 0;
        }
    }
}

.form-group-footer {
    padding: $spacing-md 0;
}

.form-errors {
    margin: 0 0 $spacing-md 0;
    padding: $spacing-sm;
    border: 1px solid rgba($red, 0.1);
    border-radius: $br-md;
    background-color: rgba($red, 0.05);
    color: $red;
    font-size: $font-size-sm;
    transition: all 0.2s ease;
}

.form-error {
    color: $white;
    background-color: rgba($red, 1);
    padding: $spacing-xxs $spacing-xs;
    border-radius: $br-sm;
    font-size: $font-size-xs;
    margin: -$spacing-xs 0;
    display: inline-block;
    position: absolute;
    top:0;
    right:0;
}
/* ... */

